# kuwala

./: .dockerignore  .flake8  .gitignore  .gitmodules  :  :!  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: admin_boundaries.yml  backend.yml  cli.yml  database_importer.yml  database_transformer.yml  frontend.yml  google_poi.yml  google_poi_api.yml  google_poi_pipeline.yml  google_trends.yml  jupyter.yml  kuwala_core.yml  linters_and_formatters.yml  neo4j.yml  neo4j_importer.yml  osm_poi.yml  population_density.yml  postgres.yml
kuwala/: .dockerignore  README.md  docker-compose.yml
kuwala-connectors/osm-poi/: package-lock.json  package.json  prettier.config.js
kuwala-connectors/population-density/: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
kuwala-core/cypher-udfs/: .gitignore  pom.xml
kuwala-core/data-importer/: main.py  requirements.txt
kuwala-pipelines/: .dockerignore  README.md  docker-compose.yml
kuwala-pipelines/google-poi/: README.md  dockerfile  requirements.txt
kuwala-pipelines/osm-poi/: .gitignore  README.md  docker-compose.yml  dockerfile  package-lock.json  package.json  prettier.config.js
kuwala-pipelines/population-density/: .gitignore  README.md  dockerfile  package.json
kuwala/pipelines/: README.md
kuwala/scripts/: build_all_containers.py  build_all_containers.sh  build_cli.py  build_cli.sh  build_jupyter_notebook.py  build_jupyter_notebook.sh  build_neo4j.py  build_neo4j.sh  build_postgres.py  init.sh  (+17 more)
(+667 files in other folders)
